# frankenscript

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  dynobject.cpp  tagged_pointer.h
.github/workflows/: buildci.yml
docs/: builtin.md  vitamines.md
examples/: 01-objects.frank  02-freezing.frank  03-regions1.frank  04-regions2.frank  05-regions3.frank  06-cowns.frank  07-expressions.frank
src/: api.h  main.cc  mermaid.h  objects.h  output.h  region.h
src/lang/: bytecode.h  interpreter.cc  interpreter.h  lang.cc  lang.h
src/lang/passes/: bytecode.cc  call_stmts.cc  flatten.cc  grouping.cc  parse.cc
src/rt/: core.h  env.h  mermaid.h  nop.h  objects.h  output.h  region.h  rt.cc  rt.h  ui.h
src/rt/core/: builtin.cc
src/rt/objects/: dyn_object.h  prototype_object.h  region.cc  region.h  region_object.h  visit.h
src/rt/ui/: mermaid.cc
src/utils/: nop.h  tagged_pointer.h
tests/: builtins.vpy  example_0.frank  example_1.frank  example_2.frank  figure_7.frank  for.vpy  funcs.vpy  ifs.vpy  leak_with_global.vpy  list_recursive.frank  list_recursive.vpy  list_while.frank  list_while.vpy  prototype.vpy  recursive_list.vpy  self.vpy  str_val.vpy  three_regions.vpy  tobias3.vpy  valid_cowns.vpy
tests/cowns/: cown1.frank  cown2.frank  cown2.vpy  cown3.frank  cown_from_cown.frank  cown_from_immutable.frank  cown_release_on_swap1.frank  cown_release_on_swap2.frank  cown_release_on_swap3.frank  cown_released_on_close1.frank  cown_released_on_close2.frank  invalid_child_region.frank  invalid_child_region.vpy  invalid_not_bridge.frank  invalid_read.frank  invalid_read.vpy  invalid_shared_region.vpy  invalid_write.frank  invalid_write.vpy  valid_01.vpy  valid_02.vpy
tests/exprs/: builtin_funcs.vpy  ifs.vpy  ints.vpy  move.vpy  prototype.vpy  take.vpy  unresolved_field.frank  unresolved_global.frank  unresolved_name.frank  user_funcs.frank  user_funcs.vpy  while.frank  while.vpy
tests/invalid_cowns/: modify_cown.vpy  read_region.vpy
tests/region/: fail_cross_region_reg.vpy
tests/regions/: dissolve_1.frank  dissolve_2.frank  dissolve_bad_1.frank  dissolve_bad_2.frank  fail_cross_region_ref.frank  fail_cross_region_ref.vpy  implicit_freeze_1.fk  implicit_freeze_1.frank  implicit_freeze_2.frank  merge.frank  merge1.frank  merge2.frank  merge3.frank  merge4.frank  merge_bad_1.frank  merge_bad_2.frank  merge_bad_3.frank  region1.vpy  region2.frank  region3.vpy  region4.frank  region4.vpy  region_bad_1.frank  region_bad_2.frank  region_bad_2.vpy  region_close_1.frank  region_close_1.vpy  region_close_2.frank  region_close_2.vpy  region_close_3.frank  region_close_3.vpy  region_close_4.frank  region_close_5.frank  region_close_5.vpy  region_close_fail_1.frank
tests/regressions/: cown_none.frank  cown_unknown.frank  frozen_bridge_segfault.frank  func_no_return.frank  parent_rc_39.vpy  tobias2.frank  tobias3.vpy
